--- a/faq.html
+++ b/faq.html
@@ -29,6 +29,54 @@
     <link rel="stylesheet" href="assets/faq.css" />
   </head>
   <body>
+
+    <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="padding: 0px;background: rgb(146,44,146);">
+      <div class="container">
+          <div class="collapse navbar-collapse" id="navcol-1">
+              <div><a class="navbar-brand" href="#" style="font-size: 11px;font-family: 'Josefin Sans', sans-serif;"><i class="mail icon"></i><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mail icon">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                          <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+                          <polyline points="3 7 12 13 21 7"></polyline>
+                      </svg>&nbsp;pweba@gmail.com</a><a class="navbar-brand" href="#" style="font-size: 11px;font-family: Lato, sans-serif;"><i class="fa fa-phone icon"></i>&nbsp; 1245(678912)</a><button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+              <ul class="navbar-nav ms-auto">
+                  <li class="nav-item"></li>
+                  <li class="nav-item"></li>
+                  <li class="nav-item"></li>
+                  <li class="nav-item"></li>
+                  <li class="nav-item"></li>
+                  <li class="nav-item"></li>
+                  <li class="nav-item"></li>
+                  <li class="nav-item"></li>
+              </ul>
+              <div class="collapse navbar-collapse" id="navcol-3">
+                  <ul class="navbar-nav ms-auto">
+                      <li class="nav-item"></li>
+                      <li class="nav-item"></li>
+                      <li class="nav-item"></li>
+                      <li class="nav-item"></li>
+                      <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #ffffff;font-family: Roboto, sans-serif;">English</a>
+                          <div class="dropdown-menu" style="color: #ffffff;font-family: Roboto, sans-serif;"><a class="dropdown-item" href="#" style="color: #584f4f;font-family: Roboto, sans-serif;">Bahasa Indonesia</a><a class="dropdown-item" href="#" style="color: #4e4646;font-family: Roboto, sans-serif;">Chinese</a><a class="dropdown-item" href="#" style="color: #ffffff;font-family: Roboto, sans-serif;"></a></div>
+                      </li>
+                      <li class="nav-item dropdown" style="color: #ffffff;font-family: Roboto, sans-serif;"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #ffffff;font-family: Roboto, sans-serif;">USD</a>
+                          <div class="dropdown-menu" style="color: #ffffff;font-family: Roboto, sans-serif;"><a class="dropdown-item" href="#" style="color: #2f2b2b;font-family: Roboto, sans-serif;">IDR</a><a class="dropdown-item" href="#" style="color: #2f2a2a;font-family: Roboto, sans-serif;">EUR</a><a class="dropdown-item" href="#" style="color: #1e1c1c;font-family: Roboto, sans-serif;">GBP</a></div>
+                      </li>
+                      <li class="nav-item" style="color: #ffffff;font-family: Roboto, sans-serif;"></li>
+                      <li class="nav-item" style="color: #ffffff;font-family: Roboto, sans-serif;"><a class="nav-link" href="login.html" style="color: #ffffff;font-family: Roboto, sans-serif;">Login&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-circle icon" style="color: #ffffff;font-family: Roboto, sans-serif;">
+                                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"></path>
+                                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"></path>
+                              </svg>&nbsp;<i class="people icon" style="color: #ffffff;font-family: Roboto, sans-serif;"></i></a></li>
+                      <li class="nav-item" style="color: #ffffff;font-family: Roboto, sans-serif;"><a class="nav-link" href="#" style="color: #ffffff;font-family: Roboto, sans-serif;">Wishlist&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-heart icon" style="color: #ffffff;font-family: Roboto, sans-serif;">
+                                  <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"></path>
+                              </svg><i class="heart icon" style="text-align: center;color: #ffffff;font-family: Roboto, sans-serif;"></i></a></li>
+                      <li class="nav-item" style="color: #ffffff;font-family: Roboto, sans-serif;"><a class="nav-link" href="#" style="color: #ffffff;font-family: Roboto, sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart2 icon" style="color: #ffffff;font-family: Roboto, sans-serif;">
+                                  <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"></path>
+                              </svg></a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </nav>
+
     <!-- top -->
     <div class="row pt-5 pb-5" id="top">
       <div class="col-2"></div>
