--- a/index.html
+++ b/index.html
@@ -343,6 +343,11 @@
                                     </section>
                                 </div>
                                 <div class="row features">
+
+                                        <div class="col-md-12">
+                                                            <h2 class="text-center" style="font-family: 'Josefin Sans', sans-serif;color: #a3057f;">Featured Products</h2>
+                                                        </div>
+
                                     <div class="col-sm-6 col-md-4 col-lg-3 item">
                                         <div class="box"><i class="fa fa-diamond icon" style="color: rgb(198,77,193);"></i>
                                             <h3 class="name" style="font-family: Lato, sans-serif;">Quality Product</h3>
