--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                                     <div class="card border-dark"><img class="img-fluid card-img-top w-100 d-block rounded-0" src="https://image.freepik.com/free-photo/white-chair-isolated-white-background-great-article-about-home-decor-essentials_181624-34302.jpg" style="height: 172.266px;">
                                                         <div class="card-body">
                                                             <div class="d-flex card-footer">
-                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair #1&nbsp;</p>
+                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair &nbsp;</p>
                                                                 <p style="text-align: right;color: #002868;font-weight: bold;width: 170px;">$32.00</p>
                                                             </div>
                                                         </div>
@@ -300,7 +300,7 @@
                                                     <div class="card border-dark"><img class="img-fluid card-img-top w-100 d-block rounded-0" src="https://image.freepik.com/free-psd/armchair-pillow_176382-870.jpg" style="height: 172.266px;">
                                                         <div class="card-body">
                                                             <div class="d-flex card-footer">
-                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair #1&nbsp;</p>
+                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair &nbsp;</p>
                                                                 <p style="text-align: right;color: #002868;font-weight: bold;width: 170px;">$32.00</p>
                                                             </div>
                                                         </div>
@@ -310,7 +310,7 @@
                                                     <div class="card border-dark"><img class="img-fluid card-img-top w-100 d-block rounded-0" src="https://image.freepik.com/free-vector/vector-two-ocher-brown-wooden-bar-stools-with-black-leather-seats-front-view-isolated-white-background_1284-47292.jpg" style="height: 172.266px;">
                                                         <div class="card-body">
                                                             <div class="d-flex card-footer" style="opacity: 1;">
-                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair #1&nbsp;</p>
+                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair &nbsp;</p>
                                                                 <p style="text-align: right;color: #002868;font-weight: bold;width: 170px;">$32.00</p>
                                                             </div>
                                                         </div>
@@ -320,7 +320,7 @@
                                                     <div class="card border-dark"><img class="img-fluid card-img-top w-100 d-block rounded-0" src="https://image.freepik.com/free-vector/round-wooden-table-circle-chairs-isolated-white_107791-3495.jpg" style="height: 172.266px;">
                                                         <div class="card-body">
                                                             <div class="d-flex card-footer">
-                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair #1&nbsp;</p>
+                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair &nbsp;</p>
                                                                 <p style="text-align: right;color: #002868;font-weight: bold;width: 170px;">$32.00</p>
                                                             </div>
                                                         </div>
@@ -330,7 +330,7 @@
                                                     <div class="card border-dark"><img class="img-fluid card-img-top w-100 d-block rounded-0" src="https://image.freepik.com/free-psd/front-view-white-padded-armchair-mockup_176382-1937.jpg" style="height: 172.266px;">
                                                         <div class="card-body">
                                                             <div class="d-flex card-footer">
-                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair #1&nbsp;</p>
+                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair &nbsp;</p>
                                                                 <p style="text-align: right;color: #002868;font-weight: bold;width: 170px;">$32.00</p>
                                                             </div>
                                                         </div>
@@ -340,7 +340,7 @@
                                                     <div class="card border-dark"><img class="img-fluid card-img-top w-100 d-block rounded-0" src="https://image.freepik.com/free-psd/chair-pillow_176382-882.jpg" style="height: 172.266px;">
                                                         <div class="card-body">
                                                             <div class="d-flex card-footer">
-                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair #1&nbsp;</p>
+                                                                <p style="text-align: left;color: #002868;font-weight: bold;width: 100;height: 24px;">Confortable chair &nbsp;</p>
                                                                 <p style="text-align: right;color: #002868;font-weight: bold;width: 170px;">$32.00</p>
                                                             </div>
                                                         </div>
