--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="bg-light border rounded border-light hero-nature carousel-hero jumbotron py-5 px-4" style="background: url(&quot;https://image.freepik.com/free-psd/armchair-pillow_176382-862.jpg&quot;) right no-repeat;">
-                                    <p style="width: 400px;text-align: left;font-size: 13px;color: #f02eb0;font-family: Lato, sans-serif;font-weight: bold;height: 0px;">Best furniture for your castle....</p>
+                                   <!-- <p style="width: 400px;text-align: left;font-size: 13px;color: #f02eb0;font-family: Lato, sans-serif;font-weight: bold;height: 0px;">Best furniture for your castle....</p> -->
                                     <p style="width: 600px;text-align: left;color: #800080;font-family: 'Josefin Sans', sans-serif;font-size: 39px;font-weight: bold;height: 133px;"><br>New Furniture Collection trend in 2020<br><br></p>
                                     <p style="width: 400px;text-align: left;font-size: 13px;color: rgb(129,121,121);font-family: Lato, sans-serif;"><br>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.<br><br></p>
                                     <p style="text-align: left;"><a class="btn btn-primary btn-lg hero-button" role="button" href="#" style="text-align: left;background: #fb2eb6;font-family: 'Josefin Sans', sans-serif;">Shop Now</a></p>
